--- a/pom.xml
+++ b/pom.xml
@@ -139,8 +139,15 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.5</version>
-		</dependency>        
-                
+		</dependency>   
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.8</version>
+		</dependency>
+
+
 	</dependencies>	
 
 </project>
