--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,18 @@
 			<artifactId>poi</artifactId>
 			<version>3.8</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>2.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<version>2.1.3</version>
+		</dependency>
+		
 
 	</dependencies>	
 
